# evtTracker

./: README.md  buildVars.py  changes.md  evtTracker.xliff  flake8.ini  mergeTranslations.yaml  pyproject.toml  readme.md  requirements.txt  sconstruct
.github/workflows/: crowdinL10n.yml  mergeTranslations.yaml  testbuilder..yaml
addon/: installTasks.py
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fr/: readme.md
addon/doc/hr/: readme.md
addon/doc/pl/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/pt_PT/: readme.md
addon/doc/ru/: readme.md
addon/doc/tr/: readme.md
addon/doc/uk/: readme.md
addon/doc/zh_CN/: readme.md
addon/globalPlugins/: evtTracker.py
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ro/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
